nakreslen scatterplot plodnosti

--- a/www/inpage.html
+++ b/www/inpage.html
@@ -339,7 +339,7 @@
          <p class="description"></p></div>
     <p class="perex">&hellip; or Karlovy Vary, Liberec and Zlín. The ranking changes when not only cultivated green space but also “city jungles” and woods are included. Karlovy Vary (in the photo) wins in both disciplines. Have a look at both charts based on the analysis of satellite imagery and see how your town has fared.</p>
 
-<div class='container ig' data-ig="prirustky">
+<div class='container ig prirustky' data-ig="prirustky">
   <div class="col">
     <div>
       <h3>Rusko roste tam,<br>kde nejsou Rusové</h3>
