mapa rostoucich nerusu hozena na index

--- a/www/_index.html
+++ b/www/_index.html
@@ -6,4 +6,20 @@
 <link rel="stylesheet" href="screen.css">
 <title>ruska-demografie</title>
 <p id='fallback'>Váš prohlížeč je bohužel zastaralý a nepodporuje interaktivní vizualizace. Doporučujeme jej aktualizovat nebo <a target="_blank" href="https://www.google.com/chrome/">stáhnout</a> <a target="_blank" href="https://www.mozilla.org/en-US/firefox/new/">jiný</a></p>
+<div class='container ig prirustky' data-ig="prirustky">
+  <div class="col">
+    <div>
+      <h3>Rusko roste tam,<br>kde nejsou Rusové</h3>
+    </div>
+  </div>
+  <div class="col">
+    <div></div>
+  </div>
+  <div class="col">
+    <div></div>
+  </div>
+  <div class="col">
+    <div></div>
+  </div>
+</div>
 <script src="script.js" charset="utf-8" async></script>
