--- a/www/_index.html
+++ b/www/_index.html
@@ -6,6 +6,20 @@
 <link rel="stylesheet" href="screen.css">
 <title>ruska-demografie</title>
 <p id='fallback'>Váš prohlížeč je bohužel zastaralý a nepodporuje interaktivní vizualizace. Doporučujeme jej aktualizovat nebo <a target="_blank" href="https://www.google.com/chrome/">stáhnout</a> <a target="_blank" href="https://www.mozilla.org/en-US/firefox/new/">jiný</a></p>
+<div class="container ig lines" data-ig="line-russia">
+  <div class="col">
+    <div class='line'></div>
+  </div>
+  <div class="col">
+    <div class='line'></div>
+  </div>
+  <div class="col">
+    <div class='line'></div>
+  </div>
+  <div class="col">
+    <div class='line'></div>
+  </div>
+</div>
 <div class='container ig prirustky' data-ig="prirustky">
   <div class="col">
     <div>
