--- a/www/_index.html
+++ b/www/_index.html
@@ -22,13 +22,13 @@
   <div class="col">
     <div><h3>Česko</div>
   </div>
-  <div class="col no-heading">
+  <div class="col no-heading other-color">
     <div class='line'></div>
   </div>
-  <div class="col no-heading">
+  <div class="col no-heading other-color">
     <div class='line'></div>
   </div>
-  <div class="col no-heading">
+  <div class="col no-heading other-color">
     <div class='line'></div>
   </div>
 </div>
