integrace do inpage, fix paddingu col-layoutu

--- a/www/inpage.html
+++ b/www/inpage.html
@@ -357,7 +357,50 @@
 </div>
 <p>Geographers from the European Environment Agency (EEA) have created a computer program capable of “computer learning and reasoning”. It “looked” at each section of the studied area. Depending on what shapes and colours it “saw”, the program labelled the sections using twenty-one categories: urban area, industry, agricultural land, building site, dock, road etc.</p>
 
+
+<div class="container ig lines" data-ig="line-russia">
+  <div class="col">
+    <div class='line'></div>
+  </div>
+  <div class="col">
+    <div class='line'></div>
+  </div>
+  <div class="col">
+    <div class='line'></div>
+  </div>
+  <div class="col">
+    <div class='line'></div>
+  </div>
+</div>
+
 <p>The result of this process are highly detailed geographical data published as the <a href="http://www.eea.europa.eu/data-and-maps/data/urban-atlas#tab-gis-data" target="_blank">Urban Atlas</a>. Czech Radio has added the boundaries of Czech regional capitals and from the resulting file it has calculated the share of green space in their total areas.</p>
+
+<div class="container ig lines lines-russia-czech" data-ig="line-russia-czech">
+  <div class="col">
+    <div><h3>Rusko</div>
+  </div>
+  <div class="col">
+    <div class='line'></div>
+  </div>
+  <div class="col">
+    <div class='line'></div>
+  </div>
+  <div class="col">
+    <div class='line'></div>
+  </div>
+  <div class="col">
+    <div><h3>Česko</div>
+  </div>
+  <div class="col no-heading other-color">
+    <div class='line'></div>
+  </div>
+  <div class="col no-heading other-color">
+    <div class='line'></div>
+  </div>
+  <div class="col no-heading other-color">
+    <div class='line'></div>
+  </div>
+</div>
 
 <p>According to the EEA, green space can be of two kinds: either visibly cultivated land used for recreational purposes (primarily parks, but also zoological or botanical gardens) or higher vegetation cover without recreation use (woods and forests). In order to be calculated in the share, either of the types needs to be open to the public and at least ten metres wide.</p>
 
