--- a/www/_index.html
+++ b/www/_index.html
@@ -8,9 +8,6 @@
 <p id='fallback'>Váš prohlížeč je bohužel zastaralý a nepodporuje interaktivní vizualizace. Doporučujeme jej aktualizovat nebo <a target="_blank" href="https://www.google.com/chrome/">stáhnout</a> <a target="_blank" href="https://www.mozilla.org/en-US/firefox/new/">jiný</a></p>
 <div class="container ig lines lines-russia-czech" data-ig="line-russia-czech">
   <div class="col">
-    <div><h3>Rusko</div>
-  </div>
-  <div class="col">
     <div class='line'></div>
   </div>
   <div class="col">
@@ -20,7 +17,10 @@
     <div class='line'></div>
   </div>
   <div class="col">
-    <div><h3>Česko</div>
+    <div class='line'></div>
+  </div>
+  <div class="col no-heading other-color">
+    <div class='line'></div>
   </div>
   <div class="col no-heading other-color">
     <div class='line'></div>
