--- a/www/inpage.html
+++ b/www/inpage.html
@@ -377,9 +377,6 @@
 
 <div class="container ig lines lines-russia-czech" data-ig="line-russia-czech">
   <div class="col">
-    <div><h3>Rusko</div>
-  </div>
-  <div class="col">
     <div class='line'></div>
   </div>
   <div class="col">
@@ -389,7 +386,10 @@
     <div class='line'></div>
   </div>
   <div class="col">
-    <div><h3>Česko</div>
+    <div class='line'></div>
+  </div>
+  <div class="col no-heading other-color">
+    <div class='line'></div>
   </div>
   <div class="col no-heading other-color">
     <div class='line'></div>
