pridana porovnavacka cesko-rusko 2004-2014

--- a/www/inpage.html
+++ b/www/inpage.html
@@ -404,6 +404,33 @@
 
 <p>According to the EEA, green space can be of two kinds: either visibly cultivated land used for recreational purposes (primarily parks, but also zoological or botanical gardens) or higher vegetation cover without recreation use (woods and forests). In order to be calculated in the share, either of the types needs to be open to the public and at least ten metres wide.</p>
 
+<div class="container ig lines lines-russia-czech-2" data-ig="line-russia-czech-2">
+  <div class="col">
+    <div class='line'></div>
+  </div>
+  <div class="col">
+    <div class='line'></div>
+  </div>
+  <div class="col">
+    <div class='line'></div>
+  </div>
+  <div class="col">
+    <div class='line'></div>
+  </div>
+  <div class="col no-heading other-color">
+    <div class='line'></div>
+  </div>
+  <div class="col no-heading other-color">
+    <div class='line'></div>
+  </div>
+  <div class="col no-heading other-color">
+    <div class='line'></div>
+  </div>
+  <div class="col no-heading other-color">
+    <div class='line'></div>
+  </div>
+</div>
+
 <p data-unhide="metoda">This is one of many possible methods. <a href="#">What are its limits?</a></p>
 
 <p data-hidden="metoda">Other lists of green cities (by this we mean international charts, we have not found a similar Czech assessment) usually compare several indicators to which different weight is ascribed. If the weight changes the result changes too. The area of a town’s green space detected by satellites was supposed to be the only and easily verifiable indicator. It has turned out that the situation is much more complex.</p>
