--- a/www/inpage.html
+++ b/www/inpage.html
@@ -446,7 +446,44 @@
 <p data-hidden="metoda">Besides, the division into categories used by the EEA may not always fully depict reality. It may not include cemeteries as public green space, which some towns count as a space for leisure time. For example the Brno Central Cemetery with its area of 56 hectares is the largest cemetery in the Czech Republic and for many people in the neighbourhood it does play the role of a park open to the public.</p>
 
 <p>As we can see, some towns (Zlín, Jihlava, Plzeň, Brno) can profit from the inclusion of woods, others (Prague, Ostrava, Pardubice, České Budějovice) lose. How come? And to what extent does the view from space reflect reality? We have tried to find answers in maps as well as among inhabitants of individual towns.</p>
-
+<div class="container ig lines line-external-deaths" data-ig="line-external-deaths">
+  <div class="col">
+    <div class='line'></div>
+  </div>
+  <div class="col">
+    <div class='line'></div>
+  </div>
+  <div class="col">
+    <div class='line'></div>
+  </div>
+  <div class="col">
+    <div class='line'></div>
+  </div>
+  <div class="col no-heading other-color">
+    <div class='line'></div>
+  </div>
+  <div class="col no-heading other-color">
+    <div class='line'></div>
+  </div>
+  <div class="col no-heading other-color">
+    <div class='line'></div>
+  </div>
+  <div class="col no-heading other-color">
+    <div class='line'></div>
+  </div>
+  <div class="col no-heading other-color">
+    <div class='line'></div>
+  </div>
+  <div class="col no-heading other-color">
+    <div class='line'></div>
+  </div>
+  <div class="col no-heading other-color">
+    <div class='line'></div>
+  </div>
+  <div class="col no-heading other-color">
+    <div class='line'></div>
+  </div>
+</div>
 <h2>1. Karlovy Vary</h2>
 <p>The computer analysis of satellite maps confirms the first impressions of visitors: the town’s green space used for recreation forms a fifth of the total municipal area. If we include woods within its borders, the percentage of green space approaches fifty per cent. Both numbers are twice as high as the second town in the ranking, the capital of Prague.</p>
 <p>“It is historically determined,” explains Jan Kopál from the Karlovy Vary Town Council. “Spas have always been associated with fresh air and calm. The greenery on the surrounding hills helps to accumulate water that comes to the surface down in the valley as curative springs. It also forms the so-called therapeutic landscape which plays an important role in healing.”</p>
