--- a/www/inpage.html
+++ b/www/inpage.html
@@ -486,6 +486,9 @@
 </div>
 <h2>1. Karlovy Vary</h2>
 <p>The computer analysis of satellite maps confirms the first impressions of visitors: the town’s green space used for recreation forms a fifth of the total municipal area. If we include woods within its borders, the percentage of green space approaches fifty per cent. Both numbers are twice as high as the second town in the ranking, the capital of Prague.</p>
+<div class="ig conatiner strom" data-ig="strom">
+
+</div>
 <p>“It is historically determined,” explains Jan Kopál from the Karlovy Vary Town Council. “Spas have always been associated with fresh air and calm. The greenery on the surrounding hills helps to accumulate water that comes to the surface down in the valley as curative springs. It also forms the so-called therapeutic landscape which plays an important role in healing.”</p>
 <p>The exceptional expanse of the Karlovy Vary green space was helped by other factors, too: the town as it is nowadays was formed by a gradual merging with neighbouring villages; green interstices have remained between them. Besides, a large section of the town lies in the Slavkovský les protected landscape area.</p>
 <p>The town also tries to expand its green space. A provisional little park was established last year in close vicinity to the Karlovy Vary Municipal Theatre where there had been an ugly vacant lot since the 1960s, which the locals have dubbed the Stone Pit. “The plot was undeveloped and overgrown with vegetation. Later it was fenced with an ugly-looking fence behind which rubbish piled up and homeless people and drug addicts gathered,” says spokesman Kopál. “Last year after an agreement with the owner, the town removed the fencing, cleaned the area and turned the flat part of the land into a little park – even though I admit it’s temporary.”</p>
