pridan strukturnik vydaju

--- a/www/_index.html
+++ b/www/_index.html
@@ -6,7 +6,11 @@
 <link rel="stylesheet" href="screen.css">
 <title>ruska-demografie</title>
 <p id='fallback'>Váš prohlížeč je bohužel zastaralý a nepodporuje interaktivní vizualizace. Doporučujeme jej aktualizovat nebo <a target="_blank" href="https://www.google.com/chrome/">stáhnout</a> <a target="_blank" href="https://www.mozilla.org/en-US/firefox/new/">jiný</a></p>
-<div class="ig conatiner strom" data-ig="strom">
+
+<div class="container ig naklady" data-ig="naklady">
+  <div class="graph"></div>
+</div>
+<!-- div class="ig conatiner strom" data-ig="strom">
 
 </div>
 <div class="container ig lines line-external-deaths" data-ig="line-external-deaths">
@@ -129,5 +133,5 @@
   <div class="col">
     <div></div>
   </div>
-</div>
+</div -->
 <script src="script.js" charset="utf-8" async></script>
