zarovnani do inpage

--- a/www/inpage.html
+++ b/www/inpage.html
@@ -490,6 +490,9 @@
 
 </div>
 <p>“It is historically determined,” explains Jan Kopál from the Karlovy Vary Town Council. “Spas have always been associated with fresh air and calm. The greenery on the surrounding hills helps to accumulate water that comes to the surface down in the valley as curative springs. It also forms the so-called therapeutic landscape which plays an important role in healing.”</p>
+<div class="container ig naklady" data-ig="naklady">
+  <div class="graph"></div>
+</div>
 <p>The exceptional expanse of the Karlovy Vary green space was helped by other factors, too: the town as it is nowadays was formed by a gradual merging with neighbouring villages; green interstices have remained between them. Besides, a large section of the town lies in the Slavkovský les protected landscape area.</p>
 <p>The town also tries to expand its green space. A provisional little park was established last year in close vicinity to the Karlovy Vary Municipal Theatre where there had been an ugly vacant lot since the 1960s, which the locals have dubbed the Stone Pit. “The plot was undeveloped and overgrown with vegetation. Later it was fenced with an ugly-looking fence behind which rubbish piled up and homeless people and drug addicts gathered,” says spokesman Kopál. “Last year after an agreement with the owner, the town removed the fencing, cleaned the area and turned the flat part of the land into a little park – even though I admit it’s temporary.”</p>
 <p>There are more examples of increasing numbers of recreational green spaces: the newly adapted bend of the river Ohře, the Rolava lido or the area between the Sokolovská, Horní Kamenná and Dolní Kamenná streets with St. Urban Church, unkempt for a long time, where the so-far newest park has been opened.</p>
