prirustky - pridana prvni pulka interakce

--- a/www/_index.html
+++ b/www/_index.html
@@ -7,9 +7,9 @@
 <title>ruska-demografie</title>
 <p id='fallback'>Váš prohlížeč je bohužel zastaralý a nepodporuje interaktivní vizualizace. Doporučujeme jej aktualizovat nebo <a target="_blank" href="https://www.google.com/chrome/">stáhnout</a> <a target="_blank" href="https://www.mozilla.org/en-US/firefox/new/">jiný</a></p>
 
-<div class="container ig naklady" data-ig="naklady">
+<!-- <div class="container ig naklady" data-ig="naklady">
   <div class="graph"></div>
-</div>
+</div> -->
 <!-- div class="ig conatiner strom" data-ig="strom">
 
 </div>
@@ -117,7 +117,7 @@
   <div class="col">
     <div class='line'></div>
   </div>
-</div>
+</div> -->
 <div class='container ig prirustky' data-ig="prirustky">
   <div class="col">
     <div>
@@ -133,5 +133,5 @@
   <div class="col">
     <div></div>
   </div>
-</div -->
+</div>
 <script src="script.js" charset="utf-8" async></script>
