--- a/www/_index.html
+++ b/www/_index.html
@@ -76,7 +76,8 @@
   <div class="col no-heading other-color">
     <div class='line'></div>
   </div>
-</div>
+</div> -->
+
 <div class="container ig lines lines-russia-czech" data-ig="line-russia-czech">
   <div class="col">
     <div class='line'></div>
@@ -104,7 +105,7 @@
   </div>
 </div>
 
-<div class="container ig lines" data-ig="line-russia">
+<!-- <div class="container ig lines" data-ig="line-russia">
   <div class="col">
     <div class='line'></div>
   </div>
@@ -117,7 +118,7 @@
   <div class="col">
     <div class='line'></div>
   </div>
-</div> -->
+</div>
 <div class='container ig prirustky' data-ig="prirustky">
   <div class="col">
     <div>
@@ -133,5 +134,5 @@
   <div class="col">
     <div></div>
   </div>
-</div>
+</div> -->
 <script src="script.js" charset="utf-8" async></script>
