prirustek - popisky na scatterplotu se zobrazuji i nahoru

--- a/www/_index.html
+++ b/www/_index.html
@@ -78,7 +78,7 @@
   </div>
 </div> -->
 
-<div class="container ig lines lines-russia-czech" data-ig="line-russia-czech">
+<!-- <div class="container ig lines lines-russia-czech" data-ig="line-russia-czech">
   <div class="col">
     <div class='line'></div>
   </div>
@@ -103,7 +103,7 @@
   <div class="col no-heading other-color">
     <div class='line'></div>
   </div>
-</div>
+</div> -->
 
 <!-- <div class="container ig lines" data-ig="line-russia">
   <div class="col">
@@ -118,7 +118,7 @@
   <div class="col">
     <div class='line'></div>
   </div>
-</div>
+</div> -->
 <div class='container ig prirustky' data-ig="prirustky">
   <div class="col">
     <div>
@@ -134,5 +134,5 @@
   <div class="col">
     <div></div>
   </div>
-</div> -->
+</div>
 <script src="script.js" charset="utf-8" async></script>
