--- a/www/inpage.html
+++ b/www/inpage.html
@@ -332,12 +332,12 @@
 <div id="main">
 <div id="article">
     <h1>Rusové proti Rusům: Země v nevyhlášené občanské válce</h1>
-    <div class="date"><span class="dateCover">5.
-      září
-      2014 v 12:29
+    <div class="date"><span class="dateCover">29.
+      dubna
+      2015 v 8:00
          </span></div><div class="image">
          <p class="description"></p></div>
-    <p class="perex">&hellip; Rusko prošlo v devadesátých letech demografickou krizí, srovnatelnou s válečným konfliktem. Za Putinovy vlády se pád do propasti zpomalil, snad i zastavil. To ale nemusí vydržet dlouho: nynější růst stojí na velmi křehkých základech.</p>
+    <p class="perex">Rusko prošlo v devadesátých letech demografickou krizí, srovnatelnou s válečným konfliktem. Za Putinovy vlády se pád do propasti zpomalil, snad i zastavil. To ale nemusí vydržet dlouho: nynější růst stojí na velmi křehkých základech.</p>
 
 <p>Zhroucením Sovětského svazu v zimě 1991 začal v Rusku krvavý konflikt, formálně nevyhlášený. Nešlo o občanskou válku, přestože oběťmi byli hlavně Rusové a počet mrtvých by ozbrojenému konfliktu odpovídal.</p>
 
@@ -373,6 +373,7 @@
 <p>Ženy tak prudké zkrácení délky života nepostihlo. Společenská krize ovšem rychle dohnala i je. V generaci nad čtyřicet let ženám rychle ubývali partneři. Nerovnováha stoupala s věkem: při narození byl poměr vyrovnaný, ve čtyřiceti letech už připadala na 100 žen 95 mužů, v padesáti 91 mužů, v šedesáti 79 mužů a v sedmdesáti 65 mužů. V důchodovém věku byl poměr 100 žen na 49 mužů.</p>
 
 <div class="ig conatiner strom" data-ig="strom">
+</div>
 
 <p>Téměř okamžitě se dostavil i další důsledek společenské krize: chyběly děti. Zatímco v osmdesátých letech se počet dětí na jednu ženu pohyboval kolem hranice prosté reprodukce, tedy těsně nad 2 dětmi, v devadesátých letech tohle číslo prudce kleslo. Mezi lety 1993 a 2006 se rodilo 1,3 dítěte na jednu ženu, ve velkých městech dokonce ještě méně, kolem 1,1 dítěte na ženu. Částečně sice tenhle vývoj reaguje na odkládání dětí na vyšší věk, které bylo ve stejném období k vidění i u nás, liší se ovšem důvod. Zatímco u nás šlo o nově objevené "užívání si, dokud to jde", v Rusku byla příčinou spíš chudoba a nejistá budoucnost.</p>
 
