prirustky - zvetsena hlavni mapa, zmenseny ostatni

--- a/www/_index.html
+++ b/www/_index.html
@@ -122,7 +122,7 @@
 <div class='container ig prirustky' data-ig="prirustky">
   <div class="col">
     <div>
-      <h3>Rusko roste tam,<br>kde nejsou Rusové</h3>
+      &nbsp;
     </div>
   </div>
   <div class="col">
