odstraneno zdvojeni "Rusko roste tam,<br>kde nejsou RusovĂ©"

--- a/www/inpage.html
+++ b/www/inpage.html
@@ -485,7 +485,7 @@
 <div class='container ig prirustky' data-ig="prirustky">
   <div class="col">
     <div>
-      <h3>Rusko roste tam,<br>kde nejsou Rusové</h3>
+      &nbsp;
     </div>
   </div>
   <div class="col">
@@ -501,9 +501,9 @@
 
 <p>Problémem etnických Rusů je zmíněná nízká plodnost. Nejhůř jsou na tom optikou počtu dětí velká města; v Moskvě se rodí 1,2 dítěte na jednu ženu, v Petrohradě je to 1,1 dítěte, Nejvyšší čísla jsou v oblastech, kde jsou etničtí Rusové v menšině: na Kavkaze, v Altaji a Tuvě nebo Baškortostánu. Rusové jsou ve své zemi druhým nejrychleji vymírajícím etnikem. Vymírající Rusy nahrazují etnické menšiny: Inguši, Čečenci, Osetinci, Tuvinci, Tataři nebo Baškirové. Severokavkazská etnika mají dvakrát až třikrát vyšší plodnost než etničtí Rusové.</p>
 
-<p>Výsledkem tohoto vývoje je rostoucí etnické napětí. Rusové i nerusové jsou sice obvykle hrdými občany Ruska, mezi etniky je ale zároveň patrné napětí, v poslední době vyhrocené obnoveným ruským nacionalismem.</p> 
+<p>Výsledkem tohoto vývoje je rostoucí etnické napětí. Rusové i nerusové jsou sice obvykle hrdými občany Ruska, mezi etniky je ale zároveň patrné napětí, v poslední době vyhrocené obnoveným ruským nacionalismem.</p>
 
-<p>Celá situace se navíc zhoršuje v důsledku dlouhotrvající imigrace. Třináctimilionový úbytek dětí v devadesátých letech Rusko nahradilo přílivem pracovníků z okolních zemí, typicky sedmnáctimilionového Kazachstánu. Ty se po pádu sovětského svazu často ocitly v ještě horší situaci a Rusko je pro jejich obyvatele vítanou destinací. Jsou to ovšem obvykle neruská etnika, což konflikt v Rusku ještě zhoršuje.</p>     
+<p>Celá situace se navíc zhoršuje v důsledku dlouhotrvající imigrace. Třináctimilionový úbytek dětí v devadesátých letech Rusko nahradilo přílivem pracovníků z okolních zemí, typicky sedmnáctimilionového Kazachstánu. Ty se po pádu sovětského svazu často ocitly v ještě horší situaci a Rusko je pro jejich obyvatele vítanou destinací. Jsou to ovšem obvykle neruská etnika, což konflikt v Rusku ještě zhoršuje.</p>
 
 <script src="https://samizdat.cz/tools/d3/3.5.3.min.js"></script>
 <script src="https://samizdat.cz/tools/topojson/1.6.8.min.js"></script>
