Zbytečně doplněny externí příčiny úmrtí pro USA

--- a/www/inpage.html
+++ b/www/inpage.html
@@ -370,9 +370,9 @@
   </div>
 </div>
 
-<p>Ženy tak prudké zkrácení délky života nepostihlo. Společenská krize ovšem rychle dohnala i je. V generaci nad čtyřicet let ženám rychle ubývali partneři. Nerovnováha stoupala s věkem: při narození byl poměr vyrovnaný, ve čtyřiceti letech už připadala na 100 žen 95 mužů, v padesáti 91 mužů, v šedesáti 79 mužů a v sedmdesáti 65 mužů. V důchodovém věku byl poměr 100 žen na 49 mužů.</p>
+<p>Ženy tak prudké zkrácení délky života nepostihlo. Společenská krize ovšem rychle dohnala i je. V generaci nad čtyřicet let ženám začali mizet partneři. Nerovnováha stoupala s věkem: při narození byl poměr vyrovnaný, ve čtyřiceti letech už připadalo na 100 žen 95 mužů, v padesáti 91 mužů, v šedesáti 79 mužů a v sedmdesáti 65 mužů. V důchodovém věku byl poměr 100 žen na 49 mužů.</p>
 
-<div class="ig conatiner strom" data-ig="strom">
+<div class="ig container strom" data-ig="strom">
 </div>
 
 <p>Téměř okamžitě se dostavil i další důsledek společenské krize: chyběly děti. Zatímco v osmdesátých letech se počet dětí na jednu ženu pohyboval kolem hranice prosté reprodukce, tedy těsně nad 2 dětmi, v devadesátých letech tohle číslo prudce kleslo. Mezi lety 1993 a 2006 se rodilo 1,3 dítěte na jednu ženu, ve velkých městech dokonce ještě méně, kolem 1,1 dítěte na ženu. Částečně sice tenhle vývoj reaguje na odkládání dětí na vyšší věk, které bylo ve stejném období k vidění i u nás, liší se ovšem důvod. Zatímco u nás šlo o nově objevené "užívání si, dokud to jde", v Rusku byla příčinou spíš chudoba a nejistá budoucnost.</p>
