--- a/www/inpage.html
+++ b/www/inpage.html
@@ -337,7 +337,7 @@
       2015 v 8:00
          </span></div><div class="image">
          <p class="description"></p></div>
-    <p class="perex">Rusko prošlo v devadesátých letech demografickou krizí, srovnatelnou s válečným konfliktem. Za Putinovy vlády se pád do propasti zpomalil, snad i zastavil. To ale nemusí vydržet dlouho: nynější růst stojí na velmi křehkých základech.</p>
+    <p class="perex">Rusko prošlo v devadesátých letech demografickou krizí srovnatelnou s válečným konfliktem. Za Putinovy vlády se pád do propasti zpomalil, snad i zastavil. To ale nemusí vydržet dlouho: nynější růst stojí na velmi křehkých základech.</p>
 
 <p>Zhroucením Sovětského svazu v zimě 1991 začal v Rusku krvavý konflikt, formálně nevyhlášený. Nešlo o občanskou válku, přestože oběťmi byli hlavně Rusové a počet mrtvých by ozbrojenému konfliktu odpovídal.</p>
 
