--- a/www/inpage.html
+++ b/www/inpage.html
@@ -347,40 +347,40 @@
 
 <div class="container ig lines lines-russia-czech" data-ig="line-russia-czech">
   <div class="col">
-    <div class='line'></div>
+    <div class='line'>graf</div>
   </div>
   <div class="col">
-    <div class='line'></div>
+    <div class='line'>graf</div>
   </div>
   <div class="col">
-    <div class='line'></div>
+    <div class='line'>graf</div>
   </div>
   <div class="col">
-    <div class='line'></div>
+    <div class='line'>graf</div>
   </div>
   <div class="col no-heading other-color">
-    <div class='line'></div>
+    <div class='line'>graf</div>
   </div>
   <div class="col no-heading other-color">
-    <div class='line'></div>
+    <div class='line'>graf</div>
   </div>
   <div class="col no-heading other-color">
-    <div class='line'></div>
+    <div class='line'>graf</div>
   </div>
   <div class="col no-heading other-color">
-    <div class='line'></div>
+    <div class='line'>graf</div>
   </div>
 </div>
 
 <p><i>Poznámka: Demografická data čerpáme od ruského statistického úřadu. Je možné, že některá čísla, například sovětské statistiky z osmdesátých let, se můžou lišit od skutečnosti. Základní populační statistiky nicméně odpovídají neruským zdrojům a při porovnání s vývojem jinde ve světě se ukazují podobné trendy. Ani vzájemné porovnání ruských dat neukazuje na anomálie, nekonzistence či úmyslné falšování statistik.</i></p>
 
-<p>Jednou z hlavních příčin předčasných úmrtí v Rusku byla – a pořád je – vysoká spotřeba alkoholu. Jen samotná otrava alkoholem je zodpovědná za pětinu předčasně zemřelých mužů, u mnoha dalších nehod a nemocí stojí v pozadí. Když sovětský vůdce Gorbačov v roce 1985 vyhlásil protialkoholní kampaň a zakázal prodej alkoholu před druhou odpoledne, prodloužila se očekávaná délka života u mužů o tři roky.</p> 
+<p>Jednou z hlavních příčin předčasných úmrtí v Rusku byla – a pořád je – vysoká spotřeba alkoholu. Jen samotná otrava alkoholem je zodpovědná za pětinu předčasně zemřelých mužů, u mnoha dalších nehod a nemocí stojí v pozadí. Když sovětský vůdce Gorbačov v roce 1985 vyhlásil protialkoholní kampaň a zakázal prodej alkoholu před druhou odpoledne, prodloužila se očekávaná délka života u mužů o tři roky.</p>
 
 <p>Efekt "suchého zákona" ale nevydržel dlouho. "V Rusku zanedlouho došel cukr," vysvětluje ruský zpravodaj Českého rozhlasu Martin Dorazín. "Vykoupily ho domácí palírny, které na černý trh chrlily tvrdý alkohol. Prohibice navíc nikdy nezabrala na Kavkazu, tamních vinic se téměř nedotkla a alkohol tam byl k dostání celou dobu."</p>
 
 <p>Samotný alkohol nebo drogy ale sedmiletý propad délky života v devadesátých letech nevysvětlí. "Konec Sovětského svazu znamenal krizi pro mnohem větší část společnosti než třeba zhroucení komunistického Československa," vysvětluje politický geograf FSV UK Michael Romancov. "Počet lidí, přímo závislých na státním rozpočtu, byl v porovnání s námi mnohem vyšší. Na ty dopadl rozpad socialistické ekonomiky nejhůř," doplňuje Romancov.</p>
 
-<p>Co následovalo, popisuje etnoložka Michelle Parsons v knize <a href="http://www.vanderbilt.edu/university-press/book/9780826519733">Umírání nepotřebných</a>. "Margarita mi s odporem vysvětlovala," tlumočí Parsons vyprávění jedné ze zpovídaných Rusek, "že devadesátá léta jí připomínala zemi těsně po válce. Nedokázala to pochopit, vždyť tentokrát válka nebyla."</p> 
+<p>Co následovalo, popisuje etnoložka Michelle Parsons v knize <a href="http://www.vanderbilt.edu/university-press/book/9780826519733">Umírání nepotřebných</a>. "Margarita mi s odporem vysvětlovala," tlumočí Parsons vyprávění jedné ze zpovídaných Rusek, "že devadesátá léta jí připomínala zemi těsně po válce. Nedokázala to pochopit, vždyť tentokrát válka nebyla."</p>
 
 <p>Při rozhovorech etnoložka postupně objevuje, co může být klíčovou příčinou tak vysoké úmrtnosti. "Zpovídaní Rusové hodně mluví o své nepotřebnosti, nemají ostatním co dát. Ukazuje se, jak politická a ekonomická transformace podkopala společenské vztahy. Dřív využívali své pozice ve státní správě, aby ostatním pomohli, to dnes nejde. Pocit 'být nepotřebný' se týká hlavně mužů - ruské ženy mají obvykle rodinu, ale muže často nepotřebuje ani rodina, ani stát," tvrdí Parsons.</p>
 
@@ -391,13 +391,13 @@
 
 <p><i>Graf ukazuje věkovou strukturu ruské společnosti v roce 2010.</i></p>
 
-<p>Demografický strom odhaluje další závažný problém devadesátých let: přestaly se rodit děti. Slabá jelcinovská generace sice do jisté míry odráží brežněvovské ročníky a ty zase kopírují zub, který do grafu udělala druhá světová válka, to ale vysvětluje jen část křivky.</p> 
+<p>Demografický strom odhaluje další závažný problém devadesátých let: přestaly se rodit děti. Slabá jelcinovská generace sice do jisté míry odráží brežněvovské ročníky a ty zase kopírují zub, který do grafu udělala druhá světová válka, to ale vysvětluje jen část křivky.</p>
 
-<p>Za zbytkem propadu stojí nízká plodnost. Od šedesátých let se počet dětí na jednu ženu pohyboval kolem hranice prosté reprodukce, tedy těsně nad 2 dětmi. V devadesátých letech tohle číslo prudce kleslo. Mezi lety 1993 a 2006 se rodilo 1,3 dítěte na jednu ženu, ve velkých městech dokonce ještě méně, v Moskvě a Petrohradě jen kolem 1,1 dítěte na ženu.</p> 
+<p>Za zbytkem propadu stojí nízká plodnost. Od šedesátých let se počet dětí na jednu ženu pohyboval kolem hranice prosté reprodukce, tedy těsně nad 2 dětmi. V devadesátých letech tohle číslo prudce kleslo. Mezi lety 1993 a 2006 se rodilo 1,3 dítěte na jednu ženu, ve velkých městech dokonce ještě méně, v Moskvě a Petrohradě jen kolem 1,1 dítěte na ženu.</p>
 
 <p>Oba trendy společně - nízká plodnost a vysoká úmrtnost - způsobily vymírání obyvatelstva pro zemi v mírových dobách neobvyklé. Od rozpadu Sovětského svazu do roku 2010 zmizelo přirozeným úbytkem, tedy rozdílem počtu narozených a zemřelých, přes 13 milionů Rusů. Za dvacet let tak vymřelo devět procent populace.</p>
 
-<p>Hrozivou demografickou díru Rusko zaplňovalo a zaplňuje migranty z bývalých sovětských republik. "Může to vypadat absurdně, ale pro obyvatele většiny zemí bývalého Sovětského svazu je Rusko lákavá představa," říká Romancov. "Hodně postsovětských zemí je na tom ekonomicky ještě hůř."</p> 
+<p>Hrozivou demografickou díru Rusko zaplňovalo a zaplňuje migranty z bývalých sovětských republik. "Může to vypadat absurdně, ale pro obyvatele většiny zemí bývalého Sovětského svazu je Rusko lákavá představa," říká Romancov. "Hodně postsovětských zemí je na tom ekonomicky ještě hůř."</p>
 
 <p>Neustávající příval migrantů ovšem nedokázal vymírající Rusy zcela nahradit. Výpadek dětí byl prostě moc velký, takže i přes příval imigrantů se Rusko začalo vylidňovat. Těsně po rozpadu Sovětského impéria mělo Rusko 148 milionů lidí, v roce 2010 už o pět milionů méně.</p>
 
@@ -411,40 +411,40 @@
 
 <div class="container ig lines line-external-deaths" data-ig="line-external-deaths">
   <div class="col">
-    <div class='line'></div>
+    <div class='line'>graf</div>
   </div>
   <div class="col">
-    <div class='line'></div>
+    <div class='line'>graf</div>
   </div>
   <div class="col">
-    <div class='line'></div>
+    <div class='line'>graf</div>
   </div>
   <div class="col">
-    <div class='line'></div>
+    <div class='line'>graf</div>
   </div>
   <div class="col no-heading other-color">
-    <div class='line'></div>
+    <div class='line'>graf</div>
   </div>
   <div class="col no-heading other-color">
-    <div class='line'></div>
+    <div class='line'>graf</div>
   </div>
   <div class="col no-heading other-color">
-    <div class='line'></div>
+    <div class='line'>graf</div>
   </div>
   <div class="col no-heading other-color">
-    <div class='line'></div>
+    <div class='line'>graf</div>
   </div>
   <div class="col no-heading other-color">
-    <div class='line'></div>
+    <div class='line'>graf</div>
   </div>
   <div class="col no-heading other-color">
-    <div class='line'></div>
+    <div class='line'>graf</div>
   </div>
   <div class="col no-heading other-color">
-    <div class='line'></div>
+    <div class='line'>graf</div>
   </div>
   <div class="col no-heading other-color">
-    <div class='line'></div>
+    <div class='line'>graf</div>
   </div>
 </div>
 
@@ -464,28 +464,28 @@
 
 <div class="container ig lines lines-russia-czech-2" data-ig="line-russia-czech-2">
   <div class="col">
-    <div class='line'></div>
+    <div class='line'>graf</div>
   </div>
   <div class="col">
-    <div class='line'></div>
+    <div class='line'>graf</div>
   </div>
   <div class="col">
-    <div class='line'></div>
+    <div class='line'>graf</div>
   </div>
   <div class="col">
-    <div class='line'></div>
+    <div class='line'>graf</div>
   </div>
   <div class="col no-heading other-color">
-    <div class='line'></div>
+    <div class='line'>graf</div>
   </div>
   <div class="col no-heading other-color">
-    <div class='line'></div>
+    <div class='line'>graf</div>
   </div>
   <div class="col no-heading other-color">
-    <div class='line'></div>
+    <div class='line'>graf</div>
   </div>
   <div class="col no-heading other-color">
-    <div class='line'></div>
+    <div class='line'>graf</div>
   </div>
 </div>
 
@@ -495,7 +495,7 @@
 
 <p>Za druhé, Rusko stále straší vysoká úmrtnost. Počty nepřirozených úmrtí sice klesly, ale pořád jsou na trojnásobku Česka. Alkoholismus zůstává jedním z hlavních problémů. S destabilizací Afghánistánu má navíc Rusko nového nepřítele. "Ruská společnost je kromě alkoholu a cigaret hodně náchylná vůči drogám," říká politický geograf Romancov. "A heroin z Afghánistánu je od začátku tohoto století pro Rusy nový problém." Jeho zdrojem jsou postsovětské republiky Tádžikistán, Uzbekistán a Turkmenistán, přes které se podle <a href="http://geopium.org/?p=185">odhadů OSN</a> pašují do Evropy dvě třetiny zakázané látky. Rusko se z tranzitní země pomalu přeměňuje na jednoho z konzumentů.</p>
 
-<p>Reformy, které by ruské společnosti pomohly, jsou navíc často nepopulární a Kreml se do nich zatím nechce pouštět. "Stále častěji jsou slyšet argumenty pro zdražení alkoholu," vysvětluje Dorazín. "Po konci osmdesátých let, kdy byl alkohol nedostupný, a devadesátých, kdy byl aspoň drahý, se teď situace změnila. Zvedly se mzdy a alkohol je snadno dostupný téměř pro každého, což je problém. Putin se ale nechal slyšet, že přes něj zdražení neprojde." 
+<p>Reformy, které by ruské společnosti pomohly, jsou navíc často nepopulární a Kreml se do nich zatím nechce pouštět. "Stále častěji jsou slyšet argumenty pro zdražení alkoholu," vysvětluje Dorazín. "Po konci osmdesátých let, kdy byl alkohol nedostupný, a devadesátých, kdy byl aspoň drahý, se teď situace změnila. Zvedly se mzdy a alkohol je snadno dostupný téměř pro každého, což je problém. Putin se ale nechal slyšet, že přes něj zdražení neprojde."
 
 <p>Podobně ruský prezident vetuje i další návrh - zvýšení hranice pro odchod do důchodu. Ta by se přiblížila ke křivce očekávané délky života, velká část Rusů by se tak důchodu vůbec nedožila. A to Putin nechce připustit, jeho popularita by utrpěla šrámy.</p>
 
@@ -503,7 +503,7 @@
 
 <p>"Rusové Putina milují, protože z nich udělal konzumenty. Nepříliš rychle, ale vytrvale jim rostla životní úroveň," popisuje vývoj v novém století Romancov. "V tom je ovšem i jeho slabina, musí se dál starat, aby se Rusové měli dobře."</p>
 
-<p>Rusové mají vysokou spotřebu alkoholu. Co dalšího si ale průměrný Rus kupuje za svůj plat? A jak se struktura jeho výdajů podobá nákupu chudého Inda, Čecha nebo bohatého Němce?</p> 
+<p>Rusové mají vysokou spotřebu alkoholu. Co dalšího si ale průměrný Rus kupuje za svůj plat? A jak se struktura jeho výdajů podobá nákupu chudého Inda, Čecha nebo bohatého Němce?</p>
 
 <div class="container ig naklady" data-ig="naklady">
   <div class="graph"></div>
@@ -519,7 +519,7 @@
 
 <p>V roce 1992 bylo Rusko etnicky ruské z 82 procent, zbylých 18 procent obyvatel tvořily neruské menšiny. Oficiálně se poměr za posledních dvacet let téměř nezměnil. V ulicích je ovšem patrná změna. "Příliv imigrantů ze střední Asie a Kavkazu je třeba v Moskvě evidentní," popisuje Dorazín. "Typický přistěhovalec je z Tádžikistánu, pracuje v pomocných dělnických profesích nebo zametá ulice. Na rozdíl od etnických Rusů má obvykle velkou rodinu."</p>
 
-<p>"Tavicím kotlem" Ruska je v současnosti dálný Východ. Mísí se tam původní etnika s čínskými imigranty. "Číňani se do Ruska stěhují jednak za obchodem, jednak se zde často žení a vdávají," popisuje Dorazín. "V Rusku můžou mít na rozdíl od Číny dětí, kolik jen chtějí. Rusové se masově učí čínsky, je tu spousta svatebních agentur, kvete vzájemný obchod." Zároveň ale nejde o příliš populární politické téma. "Rusové o Číňanech na Sibiři nemluví a ve statistikách je asi nenajdete," popisuje zpravodaj ČRo Dorazín.</p> 
+<p>"Tavicím kotlem" Ruska je v současnosti dálný Východ. Mísí se tam původní etnika s čínskými imigranty. "Číňani se do Ruska stěhují jednak za obchodem, jednak se zde často žení a vdávají," popisuje Dorazín. "V Rusku můžou mít na rozdíl od Číny dětí, kolik jen chtějí. Rusové se masově učí čínsky, je tu spousta svatebních agentur, kvete vzájemný obchod." Zároveň ale nejde o příliš populární politické téma. "Rusové o Číňanech na Sibiři nemluví a ve statistikách je asi nenajdete," popisuje zpravodaj ČRo Dorazín.</p>
 
 <p>"Ruští komentátoři se shodují, že dřív nebo později se v téhle oblasti rozhoří etnický konflikt; spíš dřív. Zároveň do toho ale nikdo nechce rýpat. Číňani potřebují ruské suroviny a Rusové čínské peníze, takže v tomhle okamžiku jsou vztahy dobré."</p>
 
@@ -532,19 +532,19 @@
     </div>
   </div>
   <div class="col">
-    <div></div>
+    <div>graf</div>
   </div>
   <div class="col">
-    <div></div>
+    <div>graf</div>
   </div>
   <div class="col">
-    <div></div>
+    <div>graf</div>
   </div>
 </div>
 
 <p>Rusové jsou ve své zemi druhým nejrychleji vymírajícím etnikem, hůř je na tom jen ruská židovská komunita. Nahrazují je menšiny: Ingušové, Čečenci, Osetinci, Tuvinci, Tataři nebo Baškirové. Severokavkazská etnika mají dvakrát až třikrát vyšší plodnost než etničtí Rusové.</p>
 
-<p>Výsledkem tohoto vývoje je etnické napětí, v poslední době vyhrocené obnoveným ruským nacionalismem. "Typický Rus se ztotožňuje s ruským národem, ruským etnikem a pravoslavnou církví," říká Romancov. "Muslimů - hlavně z Kavkazu - se bojí."</p> 
+<p>Výsledkem tohoto vývoje je etnické napětí, v poslední době vyhrocené obnoveným ruským nacionalismem. "Typický Rus se ztotožňuje s ruským národem, ruským etnikem a pravoslavnou církví," říká Romancov. "Muslimů - hlavně z Kavkazu - se bojí."</p>
 
 <p>Etnické pnutí se ještě navíc zhoršuje v důsledku dlouhotrvající imigrace. Třináctimilionový úbytek dětí v devadesátých letech Rusko nahradilo přílivem pracovníků z okolních zemí. Ti jsou ovšem většinou etnicky neruští.</p>
 
@@ -560,7 +560,7 @@
 
 <p>V Putinově éře se skutečně podařilo některé sebevražedné trendy devadesátých let přerušit. Délka života překonala čísla z osmdesátých let a Ruskám se znovu začaly rodit děti. Klíčový problém ruské společnosti - alkoholismus - ovšem Putin řešit nechce.</p>
 
-<p>Podle nejpravděpodobnějšího scénáře teď po krátké úlevě čekají Rusko další vážné potíže. Musí se popasovat s tím, že do rodičovského věku dospívají ročníky zdecimované demografickou katastrofou Jelcinovy éry. K tomu se přidává sílící ruský nacionalismus a rostoucí napětí mezi Rusy a ostatními v Rusku žijícími národy a národnostmi.</p> 
+<p>Podle nejpravděpodobnějšího scénáře teď po krátké úlevě čekají Rusko další vážné potíže. Musí se popasovat s tím, že do rodičovského věku dospívají ročníky zdecimované demografickou katastrofou Jelcinovy éry. K tomu se přidává sílící ruský nacionalismus a rostoucí napětí mezi Rusy a ostatními v Rusku žijícími národy a národnostmi.</p>
 
 <p>Nynější zdánlivě neochvějná popularita ruského prezidenta, vystavěná na příběhu o hrůzostrašných devadesátých letech a záchraně národa, se může brzy začít bortit.</p>
 
@@ -568,7 +568,7 @@
 
 <script src="https://samizdat.cz/tools/d3/3.5.3.min.js"></script>
 <script src="https://samizdat.cz/tools/topojson/1.6.8.min.js"></script>
-<!-- <script src="https://samizdat.cz/data/zelen-mesta-www/www-en/script.js"></script> -->
+<!-- <script src="https://samizdat.cz/data/ruska-demografie/www/script.js"></script> -->
 <script src="./script.js"></script>
     <div class="relatedWebs"><h3>Související weby:</h3><h4 class="boxSelectList"><a href="http://www.rozhlas.cz/zpravy/krym2014/_themeline/2231" targe="_blank">Vše o krizi na Ukrajině</a></h4></div><div class="relatedArticles"><h3>Související příspěvky:</h3><h4 class="boxSelectList"><a href="http://www.rozhlas.cz/zpravy/svet/_zprava/nato-da-zrejme-jasne-najevo-odhodlanost-branit-kazdou-z-clenskych-zemi--1392678">NATO dá zřejmě jasně najevo odhodlanost bránit každou z členských zemí</a></h4><h4 class="boxSelectList"><a href="http://www.rozhlas.cz/zpravy/politika/_zprava/cesti-ukrajinci-do-valky-rukovat-nechteji-za-co-ptaji-se--1392670">Čeští Ukrajinci do války rukovat nechtějí. Za co, ptají se</a></h4><h4 class="boxSelectList"><a href="http://www.rozhlas.cz/zpravy/evropa/_zprava/1392682">Švédové nechápou, proč chce Zeman další důkazy o operacích ruských vojáků na Ukrajině</a></h4><h4 class="boxSelectList"><a href="http://www.rozhlas.cz/_zprava/1392525">Porošenko ohlásil na pátek příměří a počítá s podpisem dohody se separatisty </a></h4></div><div class="author">
         Autor:
