--- a/www/inpage.html
+++ b/www/inpage.html
@@ -519,7 +519,7 @@
 
 <p>V roce 1992 bylo Rusko etnicky ruské z 82 procent, zbylých 18 procent obyvatel tvořily neruské menšiny. Oficiálně se poměr za posledních dvacet let téměř nezměnil. V ulicích je ovšem patrná změna. „Příliv imigrantů ze střední Asie a Kavkazu je třeba v Moskvě evidentní,” popisuje Dorazín. „Typický přistěhovalec je z Tádžikistánu, pracuje v pomocných dělnických profesích nebo zametá ulice. Na rozdíl od etnických Rusů má obvykle velkou rodinu.”</p>
 
-<p>„Tavicím kotlem” Ruska je v současnosti dálný Východ. Mísí se tam původní etnika s čínskými imigranty. „Číňani se do Ruska stěhují jednak za obchodem, jednak se zde často žení a vdávají,” popisuje Dorazín. „V Rusku můžou mít na rozdíl od Číny dětí, kolik jen chtějí. Rusové se masově učí čínsky, je tu spousta svatebních agentur, kvete vzájemný obchod.” Zároveň ale nejde o příliš populární politické téma. „Rusové o Číňanech na Sibiři nemluví a ve statistikách je asi nenajdete,” popisuje zpravodaj ČRo Dorazín.</p>
+<p>‘Tavicím kotlem’ Ruska je v současnosti dálný Východ. Mísí se tam původní etnika s čínskými imigranty. „Číňani se do Ruska stěhují jednak za obchodem, jednak se zde často žení a vdávají,” popisuje Dorazín. „V Rusku můžou mít na rozdíl od Číny dětí, kolik jen chtějí. Rusové se masově učí čínsky, je tu spousta svatebních agentur, kvete vzájemný obchod.” Zároveň ale nejde o příliš populární politické téma. „Rusové o Číňanech na Sibiři nemluví a ve statistikách je asi nenajdete,” popisuje zpravodaj ČRo Dorazín.</p>
 
 <p>„Ruští komentátoři se shodují, že dřív nebo později se v téhle oblasti rozhoří etnický konflikt; spíš dřív. Zároveň do toho ale nikdo nechce rýpat. Číňani potřebují ruské suroviny a Rusové čínské peníze, takže v tomhle okamžiku jsou vztahy dobré.”</p>
 
