fix nakladu do RSCR

--- a/www/inpage.html
+++ b/www/inpage.html
@@ -506,7 +506,7 @@
 <p>Rusové mají vysokou spotřebu alkoholu. Co dalšího si ale průměrný Rus kupuje za svůj plat? A jak se struktura jeho výdajů podobá nákupu chudého Inda, Čecha nebo bohatého Němce?</p>
 
 <div class="container ig naklady" data-ig="naklady">
-  <div class="graph"></div>
+  <div class="graph">graf</div>
 </div>
 
 <p>Třetinu platu utratí za jídlo, v tom si může podat ruku s Indem. Vysoké náklady na potraviny jsou přitom spíš charakteristikou chudších zemí. Současné ekonomické sankce zvyšují výdaje právě na tyto položky. Dalších šest procent výplaty Rusové utratí za alkohol.</p>
