Inpage - doplněny zdroje dat

--- a/www/inpage.html
+++ b/www/inpage.html
@@ -566,6 +566,8 @@
 
 <p>„Uvidíme, jak dlouho Putin tenhle tlak ustojí,” říká geograf Romancov. „Je možné, že docela dlouho. Rusové teď dostali to, na co jsou zvyklí. Nepřítele.”</p>
 
+<p><i>Zdroje dat: <a href="http://www.gks.ru/">Goskomstat</a>, <a href="http://www.gks.ru/free_doc/new_site/perepis2010/croc/perepis_itogi1612.htm">Goskomstat - Sčítání obyvatel 2010</a>, <a href="http://apps.who.int/healthinfo/statistics/mortality/causeofdeath_query/start.php">WHO - Příčiny úmrtí</a>, <a href="https://www.czso.cz/csu/czso/obyvatelstvo_hu">ČSÚ - Obyvatelstvo, časové řady</a>, <a href="https://stats.oecd.org/Index.aspx?DataSetCode=SNA_TABLE5">OECD - Final consumption expenditure of households</a>, <a href="http://en.wikipedia.org/wiki/Demographics_of_Russia">Wikipedia - Demographics of Russia</a></i></p>
+
 <script src="https://samizdat.cz/tools/d3/3.5.3.min.js"></script>
 <script src="https://samizdat.cz/tools/topojson/1.6.8.min.js"></script>
 <!-- <script src="https://samizdat.cz/data/ruska-demografie/www/script.js"></script> -->
